InternexDev_Sandbox/src/objects/Consolidated_GL_Report__c.object
<CustomObject>
    <fields>
        <fullName>Client_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Client Account</label>
        <referenceTo>Client_Account__c</referenceTo>
        <relationshipLabel>Consolidated GL Reports</relationshipLabel>
        <relationshipName>Consolidated_GL_Reports</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Funding_Currency__c</fullName>
        <label>Funding (Currency)</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Funding__c</fullName>
        <label>Funding</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Payments_Currency__c</fullName>
        <label>Payments(Currency)</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Payments__c</fullName>
        <label>Payments</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Reference__c</fullName>
        <label>Reference</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Transaction_ID__c</fullName>
        <label>Transaction ID</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Transaction_Name__c</fullName>
        <label>Transaction Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <label>Consolidated GL Report</label>
    <nameField>
        <displayFormat>CGL-{000000}</displayFormat>
        <label>Consolidated GL Report Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Consolidated GL Reports</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>